--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
     <title>Traffic Layer</title>
@@ -9,7 +9,7 @@
   <body>
     <div id="map"></div>
     <script
-      src="https://maps.googleapis.com/maps/api/js?key=%VITE_GOOGLE_MAPS_API_KEY%&callback=initMap&v=%VITE_GMAPS_VERSION%"
+      src="https://maps.googleapis.com/maps/api/js?key=%VITE_GOOGLE_MAPS_API_KEY%&callback=initMap&v=3.59"
       defer
     ></script>
   </body>
